syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

option go_package = "day03/pb";  // 指定生成的Go代码在你项目中的导入路径

package pb; // 包名


// 定义服务
service Greeter {
    // SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);
    rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);
    rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
    rpc UnarySayHello(HelloRequest) returns (HelloResponse) {}
    rpc bidirectionalWithMetadata(stream HelloRequest) returns (stream HelloResponse);
    rpc BidirectionalStreamingSayHello (stream HelloRequest) returns (stream HelloResponse);
}

// 请求消息
message HelloRequest {
    string name = 1;
}

// 响应消息
message HelloResponse {
    string reply = 1;
}
